[tool.poetry]
name = "made-with-ml"
version = "0.1.0"
description = ""
authors = ["AlphonseBrandon <alphonse.brand@gmail.com>"]
readme = "README.md"
packages = [{include = "made_with_ml"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
torch = "^2.1.0"
ipykernel = "^6.26.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
