[tool.poetry]
name = "made-with-ml"
version = "0.1.0"
description = ""
authors = ["AlphonseBrandon <alphonse.brand@gmail.com>"]
readme = "README.md"
packages = [{include = "made_with_ml"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "2.0.1"
matplotlib = "3.7.1"
torch = "^2.1.0"
ipykernel = "^6.26.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
scikit-learn = "1.2.2"
ray = {version = "2.7.0", extras = ["air"]}
hyperopt = "0.2.7"
ipywidgets = ">=8"
seaborn = "0.12.2"
pyupgrade = "3.3.2"
mlflow = "2.3.1"
nltk = "3.8.1"
numpyencoder = "0.3.0"
python-dotenv = "1.0.0"
snorkel = "0.9.9"
sqlalchemy = "1.4.48"
transformers = "4.28.1"
cleanlab = "2.3.1"
jupyterlab = "3.6.3"
lime = "0.2.0.1"
wordcloud = "1.9.2"
mkdocs = "1.4.2"
mkdocstrings = {version = ">=0.18", extras = ["python"]}
black = "23.3.0"
flake8 = "6.0.0"
flake8-pyproject = "1.2.3"
isort = "5.12.0"
great-expectations = "0.16.5"
pytest = "7.3.1"
pytest-cov = "4.0.0"
fastapi = "0.95.2"
pre-commit = "3.2.2"
typer = "0.9.0"
async-timeout = "^4.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
